test/fixtures/errors/force_colors.snapshot
*force_colors.js:1
throw new Error('Should include grayed stack trace')
^

Error: Should include grayed stack trace
    at Object.<anonymous> (*force_colors.js:1:7)
    at Module._compile (node:internal*modules*cjs*loader:1255:14)
    at Module._extensions..js (node:internal*modules*cjs*loader:1309:10)
    at Module.load (node:internal*modules*cjs*loader:1113:32)
    at Module._load (node:internal*modules*cjs*loader:960:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal*modules*run_main:83:12)
    at node:internal*main*run_main_module:23:47

Node.js *
